
*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b57   26-Mar-1999
* integrated ChangeLog with README.hybrid
* updated Hybrid-team and version.c.SH to reflect the current core team
* updated INSTALL file to match current install_ircd script
* updated all Makefiles with new makedepend info    
* massive cleaning of the doc subdir
* changed defaults in config.h for public consumption
* install_ircd now installs viconf and mkpasswd
* added a couple of ifdefs to help compile under cygwin32b20.1
* added simple.conf to doc directory
-Rodder
* fixed mtrie_conf.c kline code
-Dianora
	
version hybrid-6-b54   23-Mar-1999
* rewrote kline code (mtrie_conf.c), no more reverse, its faster now
  and ... works
* no more arbritray spoofs. too many complaints, it spoofs as 
  oper.server.name now
-Dianora

version hybrid-6-b54   19-Mar-1999
* fixed SLAVE_SERVERS in LOCOPS
-Dianora
	
version hybrid-6-b53   17-Mar-1999
* fixed misplaced #ifdef's and } causing undef'ed ANTI_SPAMBOT_EXTRA to fail
in s_serv.c s_user.c
-Dianora
* optimization in can_send() in channel.c
-orabidoo	


version hybrid-6-b52   15-Mar-1999
* userlength oopsies with usernames
* added fix by comstud to s_misc.c remove_dependents() unnecessary WALLOPS
-comstud/orabidoo	
* fixed mtrie_conf.c bugs
* added ip to /trace (help with virtual host cloners)
-Dianora
	
version hybrid-6-b51   11-Mar-1999
* added WHOIS_WAIT to info output 
-Rodder
* was using idented username instead of ~ name for unidented clients
  caused weird bug. s_conf.c attach_Iline()
* clients with > I line were still being limited by client per IP limits.
* had BUFSIZ instead of BUFSIZE in strncpy() in s_serv.c broke m_unkline
* fixed "Bad Nick" problem. was harmless but stupid. users who used
  a nick beginning with '~' would trigger this one. Had Q line code in
  slightly wrong place. s_user.c m_nick()
* fixed truncation for username, affects k-lines both unidented, idented.
  s_user.c register_user()